# ChemoPy

./: .pre-commit-config.yaml  README.md  a.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflow/: documentation.yml
.github/workflows/: docs.yml
chemopy/dataloader/: __init__.py  _perkin_elmer.py  _texas_instruments.py
chemopy/dataloader/tests/: test_perkin_elmer.py  test_texas_instruments.py
chemopy/decomposition/: __init__.py  _pca.py
chemopy/decomposition/tests/: test_pca.py
chemopy/orthogonal_corrections/: __init__.py  _projections.py
chemopy/plots/: __init__.py  _regression.py
chemopy/preprocessing/: __init__.py  _filtering.py  _msc.py  _scaling_centering.py  _scattering.py  _transformations.py
chemopy/preprocessing/tests/: test_scaling_centering.py  test_scattering.py  test_transformations.py
docs/: chemopy.decomposition.rst  chemopy.model_transfer.rst  chemopy.orthogonal_corrections.rst  chemopy.plots.rst  chemopy.preprocessing.rst  conf.py  modules.rst
docs/html/: .buildinfo  Preprocessing.html  chemopy.dataloader.html  chemopy.dataloader.tests.html  chemopy.decomposition.html  chemopy.html  chemopy.model_transfer.html  chemopy.orthogonal_corrections.html  chemopy.plots.html  chemopy.preprocessing.html  chemopy.preprocessing.tests.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  test.html
docs/html/_modules/: index.html
docs/html/_sources/: Preprocessing.rst.txt  chemopy.dataloader.rst.txt  chemopy.dataloader.tests.rst.txt  test.rst.txt  (+4 more)
(+14 files in other folders)
