[tool.poetry]
name = "chemopy"
version = "0.1.0"
description = ""
authors = ["GoncaloGuedes_CorkSupply <dp@corksupply.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pendulum = "^2.1.2"
numpy = "^1.26.1"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
openpyxl = "^3.1.2"
pre-commit = "^3.5.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
